# soth-test

./: CMakeLists.txt  HQPtest.cpp  HQPtest.h  main.cpp
